Add Google Analytics

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CS4NPC94DC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-CS4NPC94DC");
+    </script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/main.css" />
