--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<div class="mx-auto max-w-4xl my-16">
+<div class="mx-auto sm:max-w-4xl my-16 max-w-xs">
   <article class="prose">
     <h1>{{ page.title }}</h1>
     {% if page.subtitle %}
