--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
   <head>
+    {% if site.title == page.title %}
+    <title>{{ site.title }}</title>
+    {% else %}
+    <title>{{ page.title }} | {{ site.title }}</title>
+    {% endif %}
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    {% if page.url == "/" %}
+    <meta name="description" content="{{ site.title }} - {{ site.description }}" />
+    {% else %}
+    <meta name="description" content="{{ page.title }} - {{ page.subtitle }}" />
+    {% endif %}
+
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+    <meta property="og:type" content="website" />
+
+    {% if site.title == page.title %}
+    <meta property="og:title" content="{{ site.title }}" />
+    {% else %}
+    <meta property="og:title" content="{{ page.title }} | {{ site.title }}" />
+    {% endif %}
+
+    <meta property="og:image" content="{{ site.url }}/assets/images/profile-original.webp" />
+
+    {% if page.url == "/" %}
+    <meta property="og:description" content="{{ site.title }} - {{ site.description }}" />
+    {% else %}
+    <meta property="og:description" content="{{ page.title }} - {{ page.subtitle }}" />
+    {% endif %}
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="ohm.codes" />
+    <meta property="twitter:url" content="{{ site.url }}{{ page.url }}" />
+
+    {% if site.title == page.title %}
+    <meta name="twitter:title" content="{{ site.title }}" />
+    {% else %}
+    <meta name="twitter:title" content="{{ page.title }} | {{ site.title }}" />
+    {% endif %}
+
+    <meta name="twitter:image" content="{{ site.url }}/assets/images/profile-small.webp" />
+
+    {% if page.url == "/" %}
+    <meta name="twitter:description" content="{{ site.title }} - {{ site.description }}" />
+    {% else %}
+    <meta name="twitter:description" content="{{ page.title }} - {{ page.subtitle }}" />
+    {% endif %}
+
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CS4NPC94DC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -11,15 +67,6 @@
 
       gtag("config", "G-CS4NPC94DC");
     </script>
-
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <title>{{ page.title }}</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="/assets/images/favicon/site.webmanifest" />
   </head>
   <body>
     <div class="flex flex-col min-h-screen justify-between">
