--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -79,10 +79,10 @@
         </nav>
         <nav>
           <div class="grid grid-flow-col gap-4">
-            <a href="https://github.com/omegahm" class="fill-white" target="_blank">
+            <a href="https://github.com/omegahm" class="fill-white hover:fill-gray-500" target="_blank">
               {% svg /assets/images/github.svg %}
             </a>
-            <a href="https://linkedin.com/in/madsohm" class="fill-white" target="_blank">
+            <a href="https://linkedin.com/in/madsohm" class="fill-white hover:fill-gray-500" target="_blank">
               {% svg /assets/images/linkedin.svg %}
             </a>
           </div>
