New profile images

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="{{ page.title }} | {{ site.title }}" />
     {% endif %}
 
-    <meta property="og:image" content="{{ site.url }}/assets/images/profile-original.webp" />
+    <meta property="og:image" content="{{ site.url }}/assets/images/profile-original.png" />
 
     {% if page.url == "/" %}
     <meta property="og:description" content="{{ site.title }} - {{ site.description }}" />
@@ -43,7 +43,7 @@
     <meta name="twitter:title" content="{{ page.title }} | {{ site.title }}" />
     {% endif %}
 
-    <meta name="twitter:image" content="{{ site.url }}/assets/images/profile-small.webp" />
+    <meta name="twitter:image" content="{{ site.url }}/assets/images/profile-small.png" />
 
     {% if page.url == "/" %}
     <meta name="twitter:description" content="{{ site.title }} - {{ site.description }}" />
