--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: base
     {% endif %}
 
     <div class="flex items-center">
-      <img class="avatar rounded-3xl w-16 shadow-2xl" src="/assets/images/profile-small.webp" />
+      <img class="avatar rounded-3xl w-16 shadow-2xl" src="/assets/images/profile-small.png" />
       <div class="ms-4">
         <div class="text-xl font-bold">Mads Ohm Larsen</div>
         <div class="text-violet-500">{{ page.date | date: "%B %Y" }}</div>
