--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: base
 ---
 
 <div class="mx-auto sm:max-w-4xl my-16 max-w-xs">
+  <a href="/">🔙</a>
   <article class="prose">
     <h1>{{ page.title }}</h1>
     {% if page.subtitle %}
@@ -12,7 +13,7 @@ layout: base
     <div class="flex items-center">
       <img class="avatar rounded-3xl w-16 shadow-2xl" src="/assets/images/profile-small.png" />
       <div class="ms-4">
-        <div class="text-xl font-bold">Mads Ohm Larsen</div>
+        <div class="text-xl font-semibold">Mads Ohm Larsen</div>
         <div class="text-violet-500">{{ page.date | date: "%B %Y" }}</div>
       </div>
     </div>
